Inicio de punto de ventas

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -90,6 +90,22 @@
                         </a>
                     </div>
                 </div>
+                <div class="col-xl-3 col-sm-6 mb-3">
+                    <div class="card text-white bg-dark o-hidden h-100">
+                        <div class="card-body">
+                            <div style="margin-bottom: 0.25em;">
+                                <i class="fas fa-store fa-lg"></i>
+                            </div>
+                            <div class="mr-5">Ventas</div>
+                        </div>
+                        <a class="card-footer text-white clearfix small z-1" href="/admin/ventas">
+                            <span class="float-left">Editar</span>
+                            <span class="float-right">
+                                <i class="fas fa-angle-right"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Footer -->
