--- a/views/admin/ventas.ejs
+++ b/views/admin/ventas.ejs
@@ -1,5 +1,11 @@
 <% include ../partials/header.ejs %>
 
+<script>
+    localStorage.removeItem('Productos')
+    localStorage.removeItem('Cliente')
+    let x = []
+    localStorage.setItem('Productos', JSON.stringify(x))
+</script>
 <div class="container" style="margin-top: 2em; margin-bottom: 2em;">
     <div class="row">
         <div class="card col" style="width: 18rem;">
@@ -8,18 +14,20 @@
                 <form>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                        <label for="inputCity">Cliente</label>
-                        <input type="text" class="form-control" id="inputCity">
+                        <label for="cliente">Cliente</label>
+                        <input type="text" class="form-control" id="cliente">
                         </div>
                         <div class="form-group col-md-6">
-                        <label for="inputState">Empleado</label>
-                        <select id="inputState" class="form-control">
+                        <label for="empleado">Empleado</label>
+                        <select id="empleado" class="form-control">
                             <option selected>Choose...</option>
-                            <option>...</option>
+                            <% for (var i = 0; i < empleados.length; i++ ){ %>
+                                <option><%= empleados[i].Nombre %></option>
+                            <% } %>
                         </select>
                         </div>
                     </div>
-                    <center><button type="submit" class="btn btn-primary">Confirmar</button></center>
+                    <center><button class="btn btn-primary" onclick="verificar()" type="button">Confirmar</button></center>
                 </form>    
             </div>
         </div>
@@ -29,21 +37,23 @@
             <div class="card-body">
                 <h5 class="card-title">Agrega productos</h5>
                 <form class="form-inline">
-                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                    <select class="custom-select my-1 mr-sm-2" id="newProducto">
                         <option selected>Choose...</option>
-                        <option value="1">Camra full HD - 250$</option>
-                        <option value="2">Tripie prron - 500$</option>
-                        <option value="3">Lente de 40mm - 1000$</option>
+                        <% for (var i = 0; i < productos.length; i++ ){ %>
+                            <option value="<%= productos[i]._id %>"><%= productos[i].Nombre + " / " +productos[i].Marca + "   " + productos[i].Precio_Min + "$" %></option>
+                        <% } %>
                     </select>                        
                 </form>
             </div>
             <div class="card-footer">
-                    <center><button type="submit" class="btn btn-primary my-1">Agregar</button></center>
+                    <center><button class="btn btn-primary my-1" onclick="agregarProducto()">Agregar</button></center>
             </div>
         </div>
         <div class="card col" style="width: 18rem;">
             <div class="card-body">
-                <h5 class="card-title">Registrar la compra</h5>
+                <h5 class="card-title">Opciones</h5>
+                <center><button type="submit" class="btn btn-primary my-1">Ver ventas</button></center>
+                <center><button type="button" class="btn btn-primary my-1" onclick="agregarVenta()">Agregar ventas</button></center>
             </div>
         </div>
     </div> <br><br>
@@ -51,29 +61,89 @@
         <div class="card col" style="width: 18rem;">
             <div class="card-body">
                 <table class="table table-striped">
-                    <thead>
+                    <thead >
                         <tr>
-                        <th scope="col">#</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Marca</th>
                         <th scope="col">Precio</th>
                         <th scope="col">Eliminar</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                        <th scope="row">1</th>
-                        <td>Camara</td>
-                        <td>Cannon</td>
-                        <td>150$</td>
-                        <td><i class="fas fa-trash-alt fa-lg" style="color: red"></i></td>
-                        </tr>
+                    <tbody id="productos">
+                        
                     </tbody>
                 </table>    
             </div>
         </div>
     </div>
 </div>
+
+<script>
+    var i = 0
+    var precio
+    function agregarProducto(){
+        var table = document.getElementById("productos")
+        var id = document.getElementById("newProducto").value
+        var producto
+        fetch("/admin/api/prducto/" + id, {
+            method: "GET"
+        }).then(function(res){
+            return res.json()
+        }).then(function(data) {
+            table.innerHTML = table.innerHTML + '<tr id="fila'+ i +'"><td>'+ data.row.Nombre + "</td><td>" + data.row.Marca + "</td><td>"+ data.row.Precio_Min +'$</td><td><i class="fas fa-trash-alt fa-lg" style="color: red" onclick="eliminar('+i+')"></i></td></tr>'
+            i++
+            precio = precio + data.row.Precio_Min
+            aux = JSON.parse(localStorage.getItem('Productos'))
+            aux.push(data.row)
+            localStorage.setItem('Productos', JSON.stringify(aux))
+        })
+    }
+    function eliminar(i){
+        $("#fila" + i).remove();
+        var data = JSON.parse(localStorage.getItem('Productos'))
+        data.splice(i, 1)
+        localStorage.setItem('Productos', JSON.stringify(data))
+        location.reload()
+    }
+    function verificar(){
+        var Cliente = document.getElementById('cliente').value
+        var Empleado = document.getElementById('empleado').value
+
+        fetch("/admin/api/cliente/" + Cliente, {
+            method: "GET"
+        }).then(function(res){
+            return res.json()
+        }).then(function(data) {
+           if(data.success){
+            localStorage.setItem('Cliente', JSON.stringify(data.row))
+           }
+           else
+            Toast.fire({
+                  type: 'error',
+                  title: 'El cliente no existe'
+            })
+        })
+    }
+    function agregarVenta(){
+        var emp = document.getElementById('empleado').value
+        const body = {
+            Empleado: emp,
+            Cliente: JSON.parse(localStorage.getItem('Cliente')),
+            Productos: JSON.parse(localStorage.getItem('Productos')),
+            Precio: precio
+        }
+        const url = "/admin/ventas"
+              const params = {
+                headers: {
+                  "Content-type": "application/json"
+                },
+                body: JSON.stringify(body),
+                method: 'POST'
+        }        
+        fetch(url, params)
+        location.href = "/admin/ventas"
+    }
+</script>
 
 <% include ../partials/footer %>
 
