--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -103,7 +103,7 @@
               <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Camaras</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="/Productos/Camara">Camras en venta</a>
+              <a class="dropdown-item" href="/Productos/Camara">Camaras en venta</a>
               <a class="dropdown-item" href="/Productos/Lentes">Lentes</a>
               <a class="dropdown-item" href="/Productos/Tripies">Tripies</a>
             </div>
