--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
             <center>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-50" src="/img/Ecommerce-SEO.png" alt="First slide">
+                <img class="d-block w-50" src="/img/nueva.jpeg" alt="First slide">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-50" src="/img/nikon.jpg" alt="Second slide">
