--- a/views/login.ejs
+++ b/views/login.ejs
@@ -56,7 +56,7 @@
                 localStorage.setItem('pass', Contraseña),
                 localStorage.setItem('Usuario', JSON.stringify(res.row))
 
-                location.href = "/"
+                location.href = "/Productos/Camara"
               }
               else 
                 Toast.fire({
