--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             </ol>
             <center>
             <div class="carousel-inner">
@@ -19,6 +20,9 @@
               </div>
               <div class="carousel-item">
                 <img class="d-block w-50" src="/img/nikonBackground.jpg" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-50" src="/img/Ecommerce-SEO.png" alt="slide">
               </div>
             </div>
             </center>
