--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,16 +13,16 @@
             <center>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-50" src="/img/nueva.jpeg" alt="First slide">
+                <a href="/Productos/Camara"><img class="d-block w-50" src="/img/nueva.jpeg" alt="First slide" ></a>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-50" src="/img/nikon.jpg" alt="Second slide">
+                <a href="/Productos/Camara"><img class="d-block w-50" src="/img/nikon.jpg" alt="Second slide"></a>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-50" src="/img/nikonBackground.jpg" alt="Third slide">
+                <a href="/Productos/Camara"><img class="d-block w-50" src="/img/nikonBackground.jpg" alt="Third slide"></a>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-50" src="/img/Ecommerce-SEO.png" alt="slide">
+                <a href="/Productos/Camara"><img class="d-block w-50" src="/img/Ecommerce-SEO.png" alt="slide"></a>
               </div>
             </div>
             </center>
